--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
